# ML01_House-Prices

./: .gitignore  README.md  model_inference.ipynb  pyproject.toml  submission.csv
mlruns/0/: meta.yaml
mlruns/314977677056582453/: meta.yaml
models/: experiment1.ipynb  experiment2.ipynb  experiment3.ipynb  experiment4.ipynb  plots.ipynb  random_forest.ipynb
models/mlruns/0/: meta.yaml
models/mlruns/409962438709669535/: meta.yaml
models/mlruns/409962438709669535/9c046d10fa4b4f189159ddadf1ca78c7/: meta.yaml
models/mlruns/409962438709669535/9c046d10fa4b4f189159ddadf1ca78c7/params/: Cat2num  CustomPreprocess  Imputer  ModelType  droped features threshold
models/mlruns/409962438709669535/9c046d10fa4b4f189159ddadf1ca78c7/tags/: mlflow.source.name
