[project]
name = "ml01-house-prices"
version = "0.1.0"
description = ""
authors = [
    {name = "Archil",email = "azhgh22@freeuni.edu.ge"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "dagshub (>=0.5.9,<0.6.0)",
    "mlflow (>=2.21.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
